# ovia

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/: 00-skill-index.md  01-architecture-guardian.md  02-rust-backend-engineer.md  03-data-model-migrator.md  04-connector-ingestion-engineer.md  05-rag-analytics-engineer.md  06-test-coverage-gate.md  07-swarm-release-engineer.md  08-pr-review-gatekeeper.md
.claude/work-orders/: WO-0001.md
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-0b9222271724a0d34abebfc2218a5281618456fc28d48c6fa3e5e681af095278.json  query-973ed64231bdc2b3ed8fcbc85a8938d122d3852b629586f5528ade1f373c2dc2.json
backend/crates/common/src/: error.rs  types.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: env.rs  lib.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: lib.rs
backend/crates/db/src/ask/: models.rs  pg_repository.rs  repositories.rs
backend/crates/db/src/gitlab/: models.rs  pg_repository.rs
backend/crates/db/src/identity/: models.rs  pg_repository.rs  repositories.rs
backend/crates/db/src/jira/: mod.rs  models.rs  pg_repository.rs
backend/crates/db/src/kpi/: models.rs  pg_repository.rs  repositories.rs
backend/crates/db/src/sync/: models.rs  pg_repository.rs  repositories.rs
backend/crates/matching/: Cargo.toml
backend/crates/matching/src/: config.rs  engine.rs  lib.rs  trace.rs
backend/crates/matching/src/scorers/: display_name.rs  email.rs  mod.rs  service.rs  team.rs  username.rs
backend/db/migrations/: 0001_identity_v2.sql  0002_sync_watermarks.sql  0003_kpi_snapshots.sql  0004_ask_sessions.sql  0005_gitlab_data.sql  0006_jira_data.sql  0007_kpi_jira_columns.sql  0008_people_avatar.sql
backend/db/seeds/: kpi_seed.sql
backend/infra/: Caddyfile  docker-compose.dev.yml  docker-compose.swarm.yml  init-db.sh
backend/infra/backup/: backup.sh  restore.sh  verify-backup.sh
backend/infra/monitoring/: alert_rules.yml  loki-config.yml  prometheus.yml  promtail-config.yml
backend/infra/monitoring/grafana/dashboards/: ovia-overview.json
backend/scripts/: claude-relay.sh
backend/services/api/: Cargo.toml
backend/services/api/src/: error.rs  extractors.rs  main.rs
backend/services/api/src/ask/: handlers.rs  mod.rs  requests.rs  responses.rs
backend/services/api/src/identity/: formatters.rs  handlers.rs  mod.rs  requests.rs  responses.rs
backend/services/api/src/kpi/: handlers.rs  mod.rs  responses.rs
backend/services/api/src/people/: handlers.rs  mod.rs  requests.rs  responses.rs
backend/services/ingest/: Cargo.toml
backend/services/ingest/src/: connector.rs  main.rs  matching.rs
backend/services/ingest/src/confluence/: client.rs  mod.rs  models.rs  sync.rs
backend/services/ingest/src/gitlab/: client.rs  mod.rs  models.rs  mr_sync.rs  sync.rs
backend/services/ingest/src/jira/: client.rs  issue_sync.rs  mod.rs  models.rs  query.rs  sync.rs
backend/services/metrics/: Cargo.toml
backend/services/metrics/src/: main.rs
backend/services/metrics/src/kpi/: classify.rs  compute.rs  mod.rs  service.rs
backend/services/rag/: Cargo.toml
backend/services/rag/src/: main.rs
backend/services/rag/src/ask/: engine.rs  filters.rs  mod.rs
backend/services/scheduler/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs
crates/config/src/: env.rs  tracing_init.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/src/identity/: mod.rs  models.rs  repositories.rs
db/migrations/: 0001_identity_v2.sql
design/pencil/: README.md
docs/: 01-business-vision.md  02-solution-overview.md  03-architecture.md  04-modules.md  05-tech-stack.md  06-mvp-plan.md  07-launch-checklist-hetzner.md  08-ui-prototype.md  09-wireframe-spec-laptop-first.md  10-user-flows.md  11-screen-details-v2.md  12-identity-model-v2.md  13-delivery-backlog.md  14-microtasks-5-10min.md  15-backup-restore-runbook.md  15-identity-query-plan.md
docs/.planning/: OPERATING-MODE.md  WO-0001-review.md  WO-0002-review.md  WO-1001-indexes.txt  WO-1001-review.md  WO-1002-review.md  decision-log.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/components/layout/: sidebar.tsx  topbar.tsx
frontend/src/i18n/: format.ts  html-lang-sync.tsx  index.ts  plurals.ts  store.ts  types.ts  use-translation.ts
frontend/src/lib/: auth.tsx  env.ts
infra/: env.dev.example
ops/skills/claude-relay/: SKILL.md
prototype/v1/: README.md  app.js  ask.html  dashboard.html  index.html  person-360.html  reports.html  settings.html  styles.css  team-identity.html
services/ingest/: Cargo.toml
services/ingest/src/: main.rs
services/metrics/: Cargo.toml
services/metrics/src/: main.rs
services/rag/: Cargo.toml
services/rag/src/: main.rs
services/scheduler/: Cargo.toml
(+64 files in other folders)
