[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/config",
    "crates/db",
    "crates/matching",
    "services/api",
    "services/ingest",
    "services/metrics",
    "services/rag",
    "services/scheduler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP middleware
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
wiremock = "0.6"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

urlencoding = "2"

# Internal crates
ovia-common = { path = "crates/common" }
ovia-config = { path = "crates/config" }
ovia-db = { path = "crates/db" }
ovia-matching = { path = "crates/matching" }
