[package]
name = "ovia-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
tracing = { workspace = true }
ovia-common = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
