[package]
name = "ovia-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ovia-api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ovia-common = { workspace = true }
ovia-config = { workspace = true }
ovia-db = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
sqlx = { workspace = true }
