[package]
name = "ovia-metrics"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ovia-metrics"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ovia-common = { workspace = true }
ovia-config = { workspace = true }
ovia-db = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
